--- a/app/src/main/res/layout/monitoreo_tiempo_real.xml
+++ b/app/src/main/res/layout/monitoreo_tiempo_real.xml
@@ -102,6 +102,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:backgroundTint="#2196F3"
                 android:layout_marginEnd="4dp" />
 
             <Button
@@ -109,6 +110,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:backgroundTint="#75DC5E"
                 android:layout_marginStart="4dp"
 />
 
