--- a/app/src/main/res/drawable/rounded_background.xml
+++ b/app/src/main/res/drawable/rounded_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FBC02D" />
-    <corners android:radius="25dp" />
+    <solid android:color="#82CFFF"/>
+    <corners android:radius="16dp"/>
 </shape>
