--- a/app/src/main/res/drawable/rounded_edittext.xml
+++ b/app/src/main/res/drawable/rounded_edittext.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#FFFFFF" />
-    <stroke android:width="2dp" android:color="#00FFA3" />
+    <stroke android:width="3dp" android:color="#003366" />
     <corners android:radius="25dp" />
 </shape>
