--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#E3F2FD">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -23,7 +24,7 @@
                 android:text="Inicia sesión"
                 android:fontFamily="@font/titulos"
                 android:textColor="#000000"
-                android:textSize="60sp"
+                android:textSize="50sp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="-10dp"
@@ -99,7 +100,7 @@
                 android:text="¿No estás registrado? Regístrate aquí"
                 android:textSize="18sp"
                 android:fontFamily="@font/titulos"
-                android:textColor="@color/blueButton"
+                android:textColor="#003366"
                 android:layout_marginTop="20dp"
                 android:clickable="true"
                 android:focusable="true"
