--- a/app/src/main/res/layout/activity_reporte_actividad_tester.xml
+++ b/app/src/main/res/layout/activity_reporte_actividad_tester.xml
@@ -12,5 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Probar Reporte de Actividad"
-        android:padding="12dp" />
+        android:padding="12dp"
+        android:textColor="#000000"
+    android:backgroundTint="#ADD8E6" />
 </LinearLayout>
