--- a/app/src/main/res/layout/item_vacuna.xml
+++ b/app/src/main/res/layout/item_vacuna.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Dueño"
-            android:textStyle="bold"
+            android:fontFamily="@font/titulos"
             android:textColor="#000000" />
 
         <TextView
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mascota"
-            android:textStyle="bold"
+            android:fontFamily="@font/titulos"
             android:textColor="#444444" />
 
         <TextView
@@ -31,20 +31,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nombre vacuna"
-            android:textStyle="bold" />
+            android:fontFamily="@font/titulos" />
 
         <TextView
             android:id="@+id/tvFechaVacuna"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
+            android:fontFamily="@font/titulos"
             android:text="Fecha de aplicacion" />
 
         <TextView
             android:id="@+id/tvNombreVeterinario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
+            android:fontFamily="@font/titulos"
             android:text="Veterinario" />
 
     </LinearLayout>
