--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -329,7 +329,7 @@
             android:id="@+id/btnRegistrarTratamiento"
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            android:background="@drawable/rounded_button_gray"
+            android:background="@drawable/rounded_button_green"
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
@@ -361,7 +361,7 @@
             android:id="@+id/btnHistorialTratamiento"
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            android:background="@drawable/rounded_button_gray"
+            android:background="@drawable/rounded_button_green"
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
@@ -381,6 +381,37 @@
 
             <ImageView
                 android:id="@+id/medicamentos"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:src="@drawable/medicamentos"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="24dp"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/btnSaludMascota"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:background="@drawable/rounded_button_green"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:clipToOutline="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/titulos"
+                android:text="Salud de la Mascota"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="24dp"
+                android:layout_toStartOf="@+id/salud"
+                android:layout_marginEnd="16dp"/>
+
+            <ImageView
+                android:id="@+id/salud"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
                 android:src="@drawable/medicamentos"
