--- a/app/src/main/res/layout/activity_historial_tratamientos.xml
+++ b/app/src/main/res/layout/activity_historial_tratamientos.xml
@@ -29,7 +29,6 @@
         android:textSize="30sp"
         android:layout_gravity="center"
         android:backgroundTint="@color/greenButton"
-        android:layout_marginTop="30dp"
-        tools:ignore="HardcodedText" />
+        android:layout_marginTop="30dp"/>
 </LinearLayout>
 
