--- a/app/src/main/res/drawable/ic_eye_closed.xml
+++ b/app/src/main/res/drawable/ic_eye_closed.xml
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp" android:height="24dp"
-    android:viewportWidth="24" android:viewportHeight="24">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+
     <path
         android:fillColor="#FF000000"
-        android:pathData="M12,4.5C7.05,4.5 2.73,7.61 1,12c0.6,1.43 1.54,2.74 2.71,3.84L2,19.55 3.41,21l18-18L19.55,2l-3.5,3.5C14.13,4.99 13.09,4.5 12,4.5zM12,6.5c0.87,0 1.67,0.26 2.34,0.71L12,9.54 9.66,7.21C10.33,6.76 11.13,6.5 12,6.5zM12,18.5c4.95,0 9.27,-3.11 11,-7.5 -0.6,-1.43 -1.54,-2.74 -2.71,-3.84L22,4.45 20.59,3l-18,18L4.45,22l3.5,-3.5C9.87,19.01 10.91,18.5 12,18.5z"/>
+        android:pathData="M2.1,3.51L1,4.62l4.73,4.73C4.08,10.39 2.53,12.09 2,12c2.46,4.17 6.1,7 10,7 1.83,0 3.58,-0.5 5.14,-1.38l1.74,1.74 1.11,-1.11L2.1,3.51zM12,15c-1.65,0 -3,-1.35 -3,-3 0,-0.45 0.1,-0.87 0.29,-1.25l1.46,1.46c-0.04,0.25 -0.04,0.5 0,0.79 0.2,1.02 1.03,1.85 2.05,2.05 0.29,0.04 0.54,0.04 0.79,0l1.46,1.46C12.87,14.9 12.45,15 12,15zM12,7c3.31,0 6.31,1.94 7.88,5 -0.44,0.86 -1.03,1.63 -1.74,2.29L18.17,14.5C18.72,13.93 19.24,13.25 19.64,12.5 18.06,9.94 15.06,8 12,8c-0.25,0 -0.5,0.02 -0.75,0.05l-1.71,-1.71C10.34,6.12 11.15,6 12,6z" />
 </vector>
